# twrate

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  example.py  pyproject.toml
.github/workflows/: bump-version.yml  cron.yml  docker.yml  python.yml  release.yml
scripts/: db.py
skills/using-twrate-cli/: SKILL.md
src/twrate/: __init__.py  bot.py  cli.py  dbs.py  esun.py  fetcher.py  sinopac.py  types.py
src/twrate/fetchers/: __init__.py  _parsing.py  _ssl.py  bot.py  cathay.py  cooperative.py  dbs.py  esun.py  fetcher.py  firstbank.py  fubon.py  hsbc.py  kgi.py  landbank.py  line.py  megabank.py  nextbank.py  sinopac.py  taichung.py  taishin.py  yuanta.py
tests/: test_bot.py  test_cli.py  test_dbs.py  test_esun.py  test_fetcher.py  test_fetcher_edge_cases.py  test_fetcher_parsing.py  test_line.py  test_public_api_edge_cases.py  test_sinopac.py  test_types.py
tests/data/: dbs.json  esunbank.json  line.html  sinopac.json
tests/fetchers/: test_bot.py  test_dbs.py  test_esun.py  test_line.py  test_sinopac.py
