[project]
name            = "twrate"
version         = "0.4.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.12"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "rich>=14.3.1",
  "tabulate>=0.9.0",
  "typer>=0.21.1",
]

[project.scripts]
twrate = "twrate.cli:main"

[dependency-groups]
dev = [
  "influxdb-client>=1.50.0",
  "pip>=25.3",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "python-dotenv>=1.2.1",
  "ruff>=0.14.14",
  "ty>=0.0.13",
  "types-python-dateutil>=2.9.0.20260124",
  "types-setuptools>=80.10.0.20260124",
  "types-tabulate>=0.9.0.20241207",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.4.0"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "SIM",    # flake8-simplify
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true

[tool.ty.rules]
unresolved-import = "ignore"
