[project]
name            = "twrate"
version         = "0.5.1"
description     = ""
readme          = "README.md"
requires-python = ">=3.12"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "beautifulsoup4>=4.14.3",
  "curl-cffi>=0.15.0",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic>=2.13.4",
  "rich>=15.0.0",
  "tabulate>=0.10.0",
  "typer>=0.25.1",
]

[project.scripts]
twrate = "twrate.cli:main"

[dependency-groups]
dev = [
  "influxdb-client>=1.50.0",
  "pip>=26.1.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "python-dotenv>=1.2.2",
  "ruff>=0.15.13",
  "ty>=0.0.37",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.5.1"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "SIM",    # flake8-simplify
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true

[tool.ty.rules]
unresolved-import = "ignore"
